KVH/mykvh/Email-to-anything/objects/EmailMessage__c.object
<CustomObject>
    <description>e2a Email message object. It is used to store incoming and optionally outgoing emails. Emails related to a target object (the object specified in e2a Email Service rules) can be shown as related list.</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>e2a Emails</relationshipLabel>
        <relationshipName>e2a_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bcc_Address__c</fullName>
        <label>Bcc Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>e2a Emails</relationshipLabel>
        <relationshipName>e2a_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cc_Address__c</fullName>
        <label>Cc Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>e2a Emails</relationshipLabel>
        <relationshipName>e2a_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>e2a Emails</relationshipLabel>
        <relationshipName>e2a_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <label>Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <label>From Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <label>Headers</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Html_Body__c</fullName>
        <label>Html Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <label>Importance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incoming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incoming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>e2a Emails</relationshipLabel>
        <relationshipName>e2a_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_Date__c</fullName>
        <label>Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message_Id__c</fullName>
        <label>Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_From_Address__c</fullName>
        <label>New From Address</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>e2a Emails</relationshipLabel>
        <relationshipName>e2a_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Object__c</fullName>
        <label>Owner Object</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Unread</fullName>
                </value>
                <value>
                    <fullName>Replied</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Forwarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Body__c</fullName>
        <label>Text Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_Address__c</fullName>
        <label>To Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>e2a Email</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>